// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderDateSearch QueryBuilderDateSearch Component Display field if match type is equals: Expect date field not to be displayed since the match type is not equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderDateSearch QueryBuilderDateSearch Component Display field if match type is equals: Expect date field to be displayed since match type is equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            class="form-control"
            placeholder="YYYY-MM-DD"
            type="text"
            value="test"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time subtype, testing with 1998 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
      "time_zone": "UTC",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time subtype, testing with 1998-05 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
      "time_zone": "UTC",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time subtype, testing with 1998-05-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
      "time_zone": "UTC",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998-05 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998-05-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date subtype, testing with 1998 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date subtype, testing with 1998-05 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date subtype, testing with 1998-05-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date_time subtype, testing with 1998 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date_time subtype, testing with 1998-05 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date_time subtype, testing with 1998-05-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, undefined subtype, testing with 1998 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, undefined subtype, testing with 1998-05 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, undefined subtype, testing with 1998-05-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, date_time subtype, testing with null value 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, date_time_optional_tz subtype, testing with null value 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, local_date subtype, testing with null value 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, local_date_time subtype, testing with null value 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, undefined subtype, testing with null value 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, date_time subtype, testing with 2013-12-16 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
      "time_zone": "UTC",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, date_time_optional_tz subtype, testing with 2013-12-16 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, local_date subtype, testing with 2013-12-16 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, local_date_time subtype, testing with 2013-12-16 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, undefined subtype, testing with 2013-12-16 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, date_time subtype, testing with 1970-07-31 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gt": "1970-07-31",
      "time_zone": "UTC",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, date_time_optional_tz subtype, testing with 1970-07-31 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gt": "1970-07-31",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, local_date subtype, testing with 1970-07-31 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gt": "1970-07-31",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, local_date_time subtype, testing with 1970-07-31 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gt": "1970-07-31",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, undefined subtype, testing with 1970-07-31 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gt": "1970-07-31",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, date_time subtype, testing with 1981-06-15 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gte": "1981-06-15",
      "time_zone": "UTC",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, date_time_optional_tz subtype, testing with 1981-06-15 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gte": "1981-06-15",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, local_date subtype, testing with 1981-06-15 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gte": "1981-06-15",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, local_date_time subtype, testing with 1981-06-15 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gte": "1981-06-15",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, undefined subtype, testing with 1981-06-15 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "gte": "1981-06-15",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the in operator, date_time subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
                "time_zone": "UTC",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the in operator, date_time_optional_tz subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the in operator, local_date subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the in operator, local_date_time subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the in operator, undefined subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, date_time subtype, testing with 1982-04-20 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lt": "1982-04-20",
      "time_zone": "UTC",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, date_time_optional_tz subtype, testing with 1982-04-20 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lt": "1982-04-20",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, local_date subtype, testing with 1982-04-20 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lt": "1982-04-20",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, local_date_time subtype, testing with 1982-04-20 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lt": "1982-04-20",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, undefined subtype, testing with 1982-04-20 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lt": "1982-04-20",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, date_time subtype, testing with 1995-06-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lte": "1995-06-19",
      "time_zone": "UTC",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, date_time_optional_tz subtype, testing with 1995-06-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lte": "1995-06-19",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, local_date subtype, testing with 1995-06-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lte": "1995-06-19",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, local_date_time subtype, testing with 1995-06-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lte": "1995-06-19",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, undefined subtype, testing with 1995-06-19 value 1`] = `
{
  "range": {
    "data.attributes.dateField": {
      "lte": "1995-06-19",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, date_time subtype, testing with null value 1`] = `
{
  "exists": {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, date_time_optional_tz subtype, testing with null value 1`] = `
{
  "exists": {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, local_date subtype, testing with null value 1`] = `
{
  "exists": {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, local_date_time subtype, testing with null value 1`] = `
{
  "exists": {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, undefined subtype, testing with null value 1`] = `
{
  "exists": {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, date_time subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
                "time_zone": "UTC",
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, date_time_optional_tz subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, local_date subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, local_date_time subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, undefined subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notIn operator, date_time subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
                "time_zone": "UTC",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notIn operator, date_time_optional_tz subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notIn operator, local_date subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notIn operator, local_date_time subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notIn operator, undefined subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.dateField": {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Edge cases If no field value is provided, nothing should be generated. 1`] = `{}`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time subtype, testing with 1998 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
                "time_zone": "UTC",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time subtype, testing with 1998-05 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
                "time_zone": "UTC",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time subtype, testing with 1998-05-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
                "time_zone": "UTC",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998-05 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998-05-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date subtype, testing with 1998 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date subtype, testing with 1998-05 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date subtype, testing with 1998-05-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date_time subtype, testing with 1998 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date_time subtype, testing with 1998-05 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date_time subtype, testing with 1998-05-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, undefined subtype, testing with 1998 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, undefined subtype, testing with 1998-05 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, undefined subtype, testing with 1998-05-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, date_time subtype, testing with null value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "includes.name",
                      },
                    },
                    {
                      "term": {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, date_time_optional_tz subtype, testing with null value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "includes.name",
                      },
                    },
                    {
                      "term": {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, local_date subtype, testing with null value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "includes.name",
                      },
                    },
                    {
                      "term": {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, local_date_time subtype, testing with null value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "includes.name",
                      },
                    },
                    {
                      "term": {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, undefined subtype, testing with null value 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "includes.name",
                      },
                    },
                    {
                      "term": {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, date_time subtype, testing with 2013-12-16 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
                "time_zone": "UTC",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, date_time_optional_tz subtype, testing with 2013-12-16 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, local_date subtype, testing with 2013-12-16 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, local_date_time subtype, testing with 2013-12-16 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, undefined subtype, testing with 2013-12-16 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, date_time subtype, testing with 1970-07-31 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gt": "1970-07-31",
                "time_zone": "UTC",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, date_time_optional_tz subtype, testing with 1970-07-31 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gt": "1970-07-31",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, local_date subtype, testing with 1970-07-31 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gt": "1970-07-31",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, local_date_time subtype, testing with 1970-07-31 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gt": "1970-07-31",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, undefined subtype, testing with 1970-07-31 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gt": "1970-07-31",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, date_time subtype, testing with 1981-06-15 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gte": "1981-06-15",
                "time_zone": "UTC",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, date_time_optional_tz subtype, testing with 1981-06-15 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gte": "1981-06-15",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, local_date subtype, testing with 1981-06-15 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gte": "1981-06-15",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, local_date_time subtype, testing with 1981-06-15 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gte": "1981-06-15",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, undefined subtype, testing with 1981-06-15 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gte": "1981-06-15",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the in operator, date_time subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                  "time_zone": "UTC",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                  "time_zone": "UTC",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the in operator, date_time_optional_tz subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the in operator, local_date subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the in operator, local_date_time subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the in operator, undefined subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, date_time subtype, testing with 1982-04-20 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lt": "1982-04-20",
                "time_zone": "UTC",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, date_time_optional_tz subtype, testing with 1982-04-20 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lt": "1982-04-20",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, local_date subtype, testing with 1982-04-20 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lt": "1982-04-20",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, local_date_time subtype, testing with 1982-04-20 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lt": "1982-04-20",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, undefined subtype, testing with 1982-04-20 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lt": "1982-04-20",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, date_time subtype, testing with 1995-06-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lte": "1995-06-19",
                "time_zone": "UTC",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, date_time_optional_tz subtype, testing with 1995-06-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lte": "1995-06-19",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, local_date subtype, testing with 1995-06-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lte": "1995-06-19",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, local_date_time subtype, testing with 1995-06-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lte": "1995-06-19",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, undefined subtype, testing with 1995-06-19 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lte": "1995-06-19",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, date_time subtype, testing with null value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "includes.name",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, date_time_optional_tz subtype, testing with null value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "includes.name",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, local_date subtype, testing with null value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "includes.name",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, local_date_time subtype, testing with null value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "includes.name",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, undefined subtype, testing with null value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "includes.name",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, date_time subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "range": {
                  "includes.name": {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                    "time_zone": "UTC",
                  },
                },
              },
            },
          },
        },
      },
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "exists": {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, date_time_optional_tz subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "range": {
                  "includes.name": {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                  },
                },
              },
            },
          },
        },
      },
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "exists": {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, local_date subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "range": {
                  "includes.name": {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                  },
                },
              },
            },
          },
        },
      },
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "exists": {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, local_date_time subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "range": {
                  "includes.name": {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                  },
                },
              },
            },
          },
        },
      },
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "exists": {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, undefined subtype, testing with 2002-12-30 value 1`] = `
{
  "bool": {
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "range": {
                  "includes.name": {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                  },
                },
              },
            },
          },
        },
      },
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "exists": {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notIn operator, date_time subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                  "time_zone": "UTC",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                  "time_zone": "UTC",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notIn operator, date_time_optional_tz subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notIn operator, local_date subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notIn operator, local_date_time subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notIn operator, undefined subtype, testing with 1998-05-19, 2002-12-30 value 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "includes.name": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2002-12-30",
                                  "lte": "2002-12-30",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collection",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;
